force-app/main/default/objects/Clima__c/Clima__c.object-meta.xml
<CustomObject>
    <description>El clima es el registro de las condiciones climáticas para un aeropuerto en un momento determinado, esta información es guardada para cada vuelo 24 horas antes de ser realizado</description>
    <label>Clima</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Clima Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clima</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>