force-app/main/default/objects/Clima__c/fields/Aeropuerto__c.field-meta.xml
<CustomField>
    <fullName>Aeropuerto__c</fullName>
    <description>informacion del aeropuerto donde se registra el clima</description>
    <label>Aeropuerto</label>
    <referenceTo>Aeropuerto__c</referenceTo>
    <relationshipLabel>Clima</relationshipLabel>
    <relationshipName>Clima</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>