force-app/main/default/objects/Clima__c/fields/Fecha_y_hora_de_prediccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_hora_de_prediccion__c</fullName>
    <description>Fecha y hora de prediccion de clima en el aeropuerto</description>
    <label>Fecha y hora de prediccion</label>
    <type>DateTime</type>
</CustomField>