force-app/main/default/objects/Clima__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <description>Unidad de medida en la que fue tomada la temperatura en el aeropuerto</description>
    <label>Unidad</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centigrados</fullName>
            </value>
            <value>
                <fullName>Fahrenheit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>