force-app/main/default/objects/Clima__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aeropuerto__c</columns>
    <columns>Temperatura__c</columns>
    <columns>Unidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>